*** empty log message ***

--- a/trunk/README
+++ b/trunk/README
@@ -689,7 +689,8 @@ Sigg Pascal <pascal.sigg@zkb.ch>
 Ivan Leong <ivanl@pacific.net.sg>
 Virginie Amar<vamar@amadeus.net>
 Tom Ziomek <tomz@cc.comm.mot.com>
-Hamish Friedlander (hamishf@usa.net)
+Hamish Friedlander <hamishf@usa.net>
+Mark De Jong <mdj@intervu.net>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
