Added Knut Johannessen.

--- a/trunk/README
+++ b/trunk/README
@@ -691,6 +691,7 @@ Virginie Amar<vamar@amadeus.net>
 Tom Ziomek <tomz@cc.comm.mot.com>
 Hamish Friedlander <hamishf@usa.net>
 Mark De Jong <mdj@intervu.net>
+Knut Johannessen <knutj@funcom.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
