*** empty log message ***

--- a/trunk/ace/README
+++ b/trunk/ace/README
@@ -159,6 +159,9 @@ ACE_HAS_AUTOMATIC_INIT_FINI             Compiler/platform correctly
 ACE_HAS_BIG_FD_SET                      Compiler/platform has typedef
                                         u_long fdmask (e.g., Linux and
                                         SCO).
+ACE_HAS_BROKEN_EXPLICIT_DESTRUCTOR      Compiler can't handle calling destructor
+                                        explicitly using "normal" syntax, see
+                                        "ace/OS.h" for details.
 ACE_HAS_BROKEN_NAMESPACES               Compiler/platform doesn't
                                         support namespaces (or the
                                         support is not fully
