*** empty log message ***

--- a/trunk/README
+++ b/trunk/README
@@ -692,6 +692,7 @@ Tom Ziomek <tomz@cc.comm.mot.com>
 Hamish Friedlander <hamishf@usa.net>
 Mark De Jong <mdj@intervu.net>
 Knut Johannessen <knutj@funcom.com>
+Leif Jakobsmeier" <leif@informatik.uni-frankfurt.de>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
