Added Jon Lindgren

--- a/trunk/README
+++ b/trunk/README
@@ -693,6 +693,7 @@ Hamish Friedlander <hamishf@usa.net>
 Mark De Jong <mdj@intervu.net>
 Knut Johannessen <knutj@funcom.com>
 Leif Jakobsmeier" <leif@informatik.uni-frankfurt.de>
+Jon Lindgren <jlindgren@SLK.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
