*** empty log message ***

--- a/trunk/README
+++ b/trunk/README
@@ -694,6 +694,7 @@ Mark De Jong <mdj@intervu.net>
 Knut Johannessen <knutj@funcom.com>
 Leif Jakobsmeier" <leif@informatik.uni-frankfurt.de>
 Jon Lindgren <jlindgren@SLK.com>
+Christian Mueffling <cvm@aiss.de>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
