--- a/trunk/TAO/examples/Simple/bank/README
+++ b/trunk/TAO/examples/Simple/bank/README
@@ -73,8 +73,15 @@ Options:
 
 The client executes the following tests :
 
-1. Creating accounts with the same name to make sure the Account is created only once and he gets back the same object reference each time. This is confirmed by the server printing the message for Creation of an account only once.
+1. Creating accounts with the same name to make sure the Account is
+   created only once and he gets back the same object reference each
+   time. This is confirmed by the server printing the message for
+   Creation of an account only once.
 
-2. Creating accounts with different name to make sure a different Account is created and a different IOR returned each time.
+2. Creating accounts with different name to make sure a different
+   Account is created and a different IOR returned each time.
 
-3. Creating an Account with some initial balance and then withdrawing more than the current balance. The server throws an exception which is passed to the client and the client displays the reason for the exception.
+3. Creating an Account with some initial balance and then withdrawing
+   more than the current balance. The server throws an exception which is
+   passed to the client and the client displays the reason for the
+   exception.
