*** empty log message ***

--- a/trunk/README
+++ b/trunk/README
@@ -696,6 +696,8 @@ Leif Jakobsmeier" <leif@informatik.uni-frankfurt.de>
 Jon Lindgren <jlindgren@SLK.com>
 Steve Vinoski <vinoski@iona.com>
 Christian Mueffling <cvm@aiss.de>
+Victor Yu <victor.yu@computechnics.com.au>
+Jeff Donner's <JDonner@schedsys.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
