--- a/trunk/README
+++ b/trunk/README
@@ -606,7 +606,7 @@ Kevin Stanley <kstanley1@mdc.com>
 Jeff Greif <jmg@trivida.com>
 Jeff McDaniel <jsmcdani@gte.net>
 Andreas Geisler <andreas.geisler@erls.siemens.de>
-Bob McWhirter <bob@netwrench.com>
+Bob McWhirter <bob@werken.com>
 Daniel Winder <Daniel.Winder@cern.ch>
 Zheng Han <zhan@glenvan.glenayre.com>
 Christa Schwanninger <christa.schwanninger@mchp.siemens.de>
