*** empty log message ***

--- a/trunk/README
+++ b/trunk/README
@@ -698,6 +698,7 @@ Steve Vinoski <vinoski@iona.com>
 Christian Mueffling <cvm@aiss.de>
 Victor Yu <victor.yu@computechnics.com.au>
 Jeff Donner's <JDonner@schedsys.com>
+Joe Loyall <jloyall@bbn.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
