--- a/trunk/README
+++ b/trunk/README
@@ -699,6 +699,7 @@ Christian Mueffling <cvm@aiss.de>
 Victor Yu <victor.yu@computechnics.com.au>
 Jeff Donner's <JDonner@schedsys.com>
 Joe Loyall <jloyall@bbn.com>
+Stanislav Meduna <stanom@etm.co.at>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
