--- a/trunk/README
+++ b/trunk/README
@@ -700,6 +700,7 @@ Victor Yu <victor.yu@computechnics.com.au>
 Jeff Donner's <JDonner@schedsys.com>
 Joe Loyall <jloyall@bbn.com>
 Stanislav Meduna <stanom@etm.co.at>
+Christian Korn <korn@gate.qaqa.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
