--- a/trunk/README
+++ b/trunk/README
@@ -701,6 +701,7 @@ Jeff Donner's <JDonner@schedsys.com>
 Joe Loyall <jloyall@bbn.com>
 Stanislav Meduna <stanom@etm.co.at>
 Christian Korn <korn@gate.qaqa.com>
+Ron Barack <rab@terminal.cz>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
