*** empty log message ***

--- a/trunk/README
+++ b/trunk/README
@@ -702,6 +702,7 @@ Joe Loyall <jloyall@bbn.com>
 Stanislav Meduna <stanom@etm.co.at>
 Christian Korn <korn@gate.qaqa.com>
 Ron Barack <rab@terminal.cz>
+Steve Totten <totten_s@ociweb.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
