--- a/trunk/TAO/performance-tests/Cubit/TAO/IDL_Cubit/README
+++ b/trunk/TAO/performance-tests/Cubit/TAO/IDL_Cubit/README
@@ -79,6 +79,7 @@ performance of collocated objects.  Run the test without any argument
 to see results with collocation optimization.  Run it with
 <-ORBcollocation no> to perform the same test without the optimization.
 
+
 run_test.pl:
 ------------
 
@@ -96,7 +97,8 @@ run_test [-h] [-n num] [-mcast] [-sleeptime t] [-debug] [-release]
 -release            -- runs the Release version of the test (for NT use)
                        (default is 3 seconds)
 
-Sample Run-Using files to communicate IOR:
+
+Sample Run, Using files to communicate IOR:
 ------------------------------------------
 
 1. Start the server.
@@ -118,6 +120,23 @@ Factory received OK
 .
 .
 
+
+Sample Run, passing the IOR on the command line, on VxWorks:
+------------------------------------------------------------
+    -> ld < server
+    -> spa main, "-ORBobjrefstyle", "url"
+            IDL_Cubit: server
+
+    The IOR is: <iiop:1.0//samba:1028/U/child_poa/factory>
+
+    -> ld < client
+    -> spa main, "-k", "iiop:1.0//samba:1028/U/child_poa/factory"
+    Enter <number> to select, anything else to stop: 2
+
+The IOR provided to the client is the IOR that the server printed out.
+Be sure to replace the <> with "".
+
+
 Using JAVA to access the IDL Cubit test:
 ----------------------------------------
 
@@ -136,6 +155,7 @@ javac *.java
 Run:
 java IDL_Cubit_Client
 
+
 Running IDL_Cubit on CHORUS:
 --------------------------
 
@@ -143,7 +163,7 @@ Running IDL_Cubit on CHORUS:
 Chorus VME Board to the IP address of that Board before you run
 MT_Cubit test.
 
-e.g
+e.g.,
 $rsh tambora1 setenv HOST 128.252.165.82
 
 2. You should make sure that the path to IOR file has write permission
@@ -151,12 +171,12 @@ for ALL.
 
 server:
 ------
-$rsh host_name arun path_to_server -o path_to_ior_file -ORBdotteddecimaladdresses 1 <server_options> 
+$rsh host_name arun path_to_server -o path_to_ior_file -ORBdotteddecimaladdresses 1 <server_options>
 
 You DONT have to use -ORBdotteddecimaladdresses 1 if you have
-TAO_USE_DOTTED_DECIMAL_ADDRESSES defined in your config.h file. 
+TAO_USE_DOTTED_DECIMAL_ADDRESSES defined in your config.h file.
 
-e.g
+e.g.,
 $rsh tambora1 arun /IDL_Cubit/server  -o /ior
 -ORBdotteddecimaladdresses 1 -ORBobjrefstyle url
 
@@ -165,6 +185,6 @@ client:
 
 $rsh host_name arun path_to_client -f path_to_ior_file <client_options>
 
-e.g
+e.g.,
 
 $rsh tambora2 arun /IDL_Cubit/client -f /ior
