--- a/trunk/README
+++ b/trunk/README
@@ -703,6 +703,7 @@ Stanislav Meduna <stanom@etm.co.at>
 Christian Korn <korn@gate.qaqa.com>
 Ron Barack <rab@terminal.cz>
 Steve Totten <totten_s@ociweb.com>
+Faron Dutton <fdutton@avxus.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
