--- a/trunk/ace/README
+++ b/trunk/ace/README
@@ -635,10 +635,7 @@ ACE_LACKS_CONDATTR_PSHARED              Platform has no implementation
                                         pthreads!
 ACE_LACKS_DIFFTIME                      Platform lacks difftime() implementation
 ACE_LACKS_FCNTL                         Platform lacks POSIX-style fcntl ().
-ACE_LACKS_GETS                          Platform lacks ::gets (), or
-                                        it's desired to ensure that it
-                                        doesn't get used.  Linux egcs
-                                        g++ warns against using it.
+ACE_LACKS_FSYNC				Platform lacks fsync().
 ACE_LACKS_INLINE_FUNCTIONS              Platform can't handle "inline"
                                         keyword correctly.
 ACE_LACKS_NETDB_REENTRANT_FUNCTIONS     Platform does not support
