added Gary York <gfyork@ix.netcom.com>

--- a/trunk/README
+++ b/trunk/README
@@ -704,6 +704,7 @@ Christian Korn <korn@gate.qaqa.com>
 Ron Barack <rab@terminal.cz>
 Steve Totten <totten_s@ociweb.com>
 Faron Dutton <fdutton@avxus.com>
+Gary York <gfyork@ix.netcom.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
