--- a/trunk/README
+++ b/trunk/README
@@ -705,6 +705,7 @@ Ron Barack <rab@terminal.cz>
 Steve Totten <totten_s@ociweb.com>
 Faron Dutton <fdutton@avxus.com>
 Gary York <gfyork@ix.netcom.com>
+Patty Hair <patty@Lynx.COM>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
