--- a/trunk/README
+++ b/trunk/README
@@ -209,6 +209,13 @@ that describe the ACE wrappers and the ADAPTIVE system in more detail.
 The current release has been tested extensively, but if you find any
 bugs, please report them to the ACE mailing list
 ace-users@cs.wustl.edu using the $ACE_ROOT/BUG-REPORT-FORM.
+Please use the same form to submit questions, comments, etc.
+To ensure that you see responses, please do one of the following:
+
+    1) Subscribe to the ace-users mail list, by sending email with
+       contents "subscribe ace-users" to majordomo@cs.wustl.edu.
+
+    2) Or, monitor the comp.soft-sys.ace newsgroup for responses.
 
 ----------------------------------------
 
