--- a/trunk/README
+++ b/trunk/README
@@ -713,6 +713,7 @@ Steve Totten <totten_s@ociweb.com>
 Faron Dutton <fdutton@avxus.com>
 Gary York <gfyork@ix.netcom.com>
 Patty Hair <patty@Lynx.COM>
+Ivan Pascal <pascal@info.tsu.ru>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
