added William A. Hoffman <hoffman@crd.ge.com>

--- a/trunk/README
+++ b/trunk/README
@@ -714,6 +714,7 @@ Faron Dutton <fdutton@avxus.com>
 Gary York <gfyork@ix.netcom.com>
 Patty Hair <patty@Lynx.COM>
 Ivan Pascal <pascal@info.tsu.ru>
+William A. Hoffman <hoffman@crd.ge.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
