--- a/trunk/TAO/TAO_IDL/tao_idl.1
+++ b/trunk/TAO/TAO_IDL/tao_idl.1
@@ -82,7 +82,7 @@ operation lookup strategy.
 To specify the IDL compiler to generate skelton code that uses binary search
 based operation lookup strategy.
 .TP
-.B "\-H binary_linear"
+.B "\-H linear_search"
 To specify the IDL compiler to generate skelton code that uses linear search
 based operation lookup strategy.
 .TP
