--- a/trunk/README
+++ b/trunk/README
@@ -715,6 +715,7 @@ Gary York <gfyork@ix.netcom.com>
 Patty Hair <patty@Lynx.COM>
 Ivan Pascal <pascal@info.tsu.ru>
 William A. Hoffman <hoffman@crd.ge.com>
+Mark Lucovsky <markl@microsoft.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
