*** empty log message ***

--- a/trunk/README
+++ b/trunk/README
@@ -671,7 +671,7 @@ Bill Hall <hts@gte.net>
 Brian Gilstrap <gilstrap_b@ociweb.com>
 Balaji Srinivasan <balaji@cplane.com>
 Anders W. Tell <anderst@toolsmiths.se>
-Larry <larry@paradigmsim.com>
+Larry Lachman <larry@paradigmsim.com>
 Terry Rosenbaum <Terry.Rosenbaum@Radiology.MSU.edu>
 Rainer Blome <rainer_blome@de.ibm.com>
 Kirk Ellett <kellett@mdc.com>
