added Greg Holtmeyer <gholtmeyer@mdc.com>

--- a/trunk/README
+++ b/trunk/README
@@ -716,6 +716,7 @@ Patty Hair <patty@Lynx.COM>
 Ivan Pascal <pascal@info.tsu.ru>
 William A. Hoffman <hoffman@crd.ge.com>
 Mark Lucovsky <markl@microsoft.com>
+Greg Holtmeyer <gholtmeyer@mdc.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
