--- a/trunk/README
+++ b/trunk/README
@@ -717,6 +717,7 @@ Ivan Pascal <pascal@info.tsu.ru>
 William A. Hoffman <hoffman@crd.ge.com>
 Mark Lucovsky <markl@microsoft.com>
 Greg Holtmeyer <gholtmeyer@mdc.com>
+Jody Hagins <jody@atdesk.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
