--- a/trunk/README
+++ b/trunk/README
@@ -718,6 +718,7 @@ William A. Hoffman <hoffman@crd.ge.com>
 Mark Lucovsky <markl@microsoft.com>
 Greg Holtmeyer <gholtmeyer@mdc.com>
 Jody Hagins <jody@atdesk.com>
+Patrice Bensoussan <pbensoussan@amadeus.net>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
