--- a/trunk/README
+++ b/trunk/README
@@ -719,6 +719,7 @@ Mark Lucovsky <markl@microsoft.com>
 Greg Holtmeyer <gholtmeyer@mdc.com>
 Jody Hagins <jody@atdesk.com>
 Patrice Bensoussan <pbensoussan@amadeus.net>
+Keith Brown <kalbrown@ix.netcom.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
