--- a/trunk/README
+++ b/trunk/README
@@ -720,6 +720,7 @@ Greg Holtmeyer <gholtmeyer@mdc.com>
 Jody Hagins <jody@atdesk.com>
 Patrice Bensoussan <pbensoussan@amadeus.net>
 Keith Brown <kalbrown@ix.netcom.com>
+Barry Hoggard <hoggardb@panix.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
