--- a/trunk/README
+++ b/trunk/README
@@ -721,7 +721,7 @@ Jody Hagins <jody@atdesk.com>
 Patrice Bensoussan <pbensoussan@amadeus.net>
 Keith Brown <kalbrown@ix.netcom.com>
 Barry Hoggard <hoggardb@panix.com>
-Peter J. Maso <peterm@fl.net.a???>
+Peter J. Mason <peterm@fl.net.au>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
