--- a/trunk/README
+++ b/trunk/README
@@ -722,8 +722,9 @@ Patrice Bensoussan <pbensoussan@amadeus.net>
 Keith Brown <kalbrown@ix.netcom.com>
 Barry Hoggard <hoggardb@panix.com>
 Peter J. Mason <peterm@fl.net.au>
-Jerry De Master <jdemaste@ipdinc.com> 
+Jerry De Master <jdemaste@ipdinc.com>
 Greg Gallant <greg.gallant@jhuapl.edu>
+wym <wym@dekang.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
