--- a/trunk/ace/README
+++ b/trunk/ace/README
@@ -64,6 +64,11 @@ ACE_TEMPLATES_REQUIRE_SOURCE            Compiler's template mechanim
                                         must see source code (i.e.,
                                         .cpp files).  This is used for
                                         GNU G++.
+ACE_TIMER_SKEW                          If a timed ::select () can return
+                                        early, then ACE_TIMER_SKEW is the
+                                        maximum adjustment, in microseconds,
+                                        that ACE_Timer_Queue uses to
+                                        compensate for the early return.
 ACE_TLI_TCP_DEVICE                      Device the platform uses for TCP on
                                         TLI.  Only needed if not /dev/tcp.
 ACE_USE_POLL                            The OS platform supports the
