--- a/trunk/README
+++ b/trunk/README
@@ -725,6 +725,7 @@ Peter J. Mason <peterm@fl.net.au>
 Jerry De Master <jdemaste@ipdinc.com>
 Greg Gallant <greg.gallant@jhuapl.edu>
 wym <wym@dekang.com>
+Karel Zuiderveld <kzuiderveld@vitalimages.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson and is now at ObjectSpace.  Paul devised the recursive
