--- a/trunk/TAO/orbsvcs/tests/EC_Basic/README
+++ b/trunk/TAO/orbsvcs/tests/EC_Basic/README
@@ -1,9 +1,9 @@
 # $Id$
 
-A regression test for the Event Channel.
+A regression test for TAO's Real-time Event Channel.
 
 This program will be used to test the basic features of the Event
-Channel. The current tests are:
+Channel.  The current tests are:
 
 	+ SupplierID_Test: verify that several suppliers can can the
 	  same supplier ID.
