--- a/ACE/NEWS
+++ b/ACE/NEWS
@@ -13,6 +13,9 @@ USER VISIBLE CHANGES BETWEEN ACE-8.0.2 and ACE-8.0.3
 
 . Use C++11 default for more classes
 
+. GCC versions less than 9 and Clang versions less than 12 are
+  no longer tested in GitHub Actions CI
+
 USER VISIBLE CHANGES BETWEEN ACE-8.0.1 and ACE-8.0.2
 ====================================================
 
