List dropped platforms
    * ACE/NEWS:

--- a/ACE/NEWS
+++ b/ACE/NEWS
@@ -16,6 +16,8 @@ USER VISIBLE CHANGES BETWEEN ACE-8.0.2 and ACE-8.0.3
 . GCC versions less than 9 and Clang versions less than 12 are
   no longer tested in GitHub Actions CI
 
+. Dropped support for Embarcadero C++ Builder bcc32c and bcc64 compilers
+
 USER VISIBLE CHANGES BETWEEN ACE-8.0.1 and ACE-8.0.2
 ====================================================
 
