--- a/ACE/NEWS
+++ b/ACE/NEWS
@@ -18,6 +18,8 @@ USER VISIBLE CHANGES BETWEEN ACE-8.0.2 and ACE-8.0.3
 
 . Dropped support for Embarcadero C++ Builder bcc32c and bcc64 compilers
 
+. Updated support for Green Hills INTEGRITY and INTEGRITY-178 tuMP RTOS
+
 USER VISIBLE CHANGES BETWEEN ACE-8.0.1 and ACE-8.0.2
 ====================================================
 
