--- a/ACE/NEWS
+++ b/ACE/NEWS
@@ -1,6 +1,11 @@
 USER VISIBLE CHANGES BETWEEN ACE-6.5.21 and ACE-6.5.22
 ======================================================
 
+. Support Linux platforms that use musl-libc instead of glibc
+
+. Thread names given to ACE_OS::thr_create are now passed down to the OS
+  on Windows.
+
 USER VISIBLE CHANGES BETWEEN ACE-6.5.20 and ACE-6.5.21
 ======================================================
 
