--- a/TAO/NEWS
+++ b/TAO/NEWS
@@ -1,10 +1,12 @@
 USER VISIBLE CHANGES BETWEEN TAO-2.5.21 and TAO-2.5.22
 ======================================================
 
+. Threads created by TAO_Thread_Per_Connection_Handler now have names
+
 USER VISIBLE CHANGES BETWEEN TAO-2.5.20 and TAO-2.5.21
 ======================================================
 
-- TAO_IDL: Added support for the map data type, but this isn't supported in TAO
+. TAO_IDL: Added support for the map data type, but this isn't supported in TAO
   user applications except for local usage
 
 USER VISIBLE CHANGES BETWEEN TAO-2.5.19 and TAO-2.5.20
