--- a/ACE/NEWS
+++ b/ACE/NEWS
@@ -1,3 +1,6 @@
+USER VISIBLE CHANGES BETWEEN ACE-8.0.3 and ACE-8.0.4
+====================================================
+
 USER VISIBLE CHANGES BETWEEN ACE-8.0.2 and ACE-8.0.3
 ====================================================
 
