--- a/ACE/NEWS
+++ b/ACE/NEWS
@@ -6,6 +6,9 @@ USER VISIBLE CHANGES BETWEEN ACE-6.5.21 and ACE-6.5.22
 . Thread names given to ACE_OS::thr_create are now passed down to the OS
   on Windows.
 
+. Removed ACE_make_checked_array_iterator that used deprecated
+  stdext::checked_array_iterator
+
 USER VISIBLE CHANGES BETWEEN ACE-6.5.20 and ACE-6.5.21
 ======================================================
 
